# docs/swagger.json
@@ -318,6 +318,54 @@
                 }
             }
         },
+        "/auth/refresh": {
+            "get": {
+                "description": "refresh tokens",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Refresh",
+                "operationId": "refresh-tokens",
+                "responses": {
+                    "200": {
+                        "description": "token",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/sign-in": {
             "post": {
                 "description": "login",
@@ -339,7 +387,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/rest.signInInput"
+                            "$ref": "#/definitions/domain.SignInInput"
                         }
                     }
                 ],
@@ -473,6 +521,25 @@
                 }
             }
         },
+        "domain.SignInInput": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "minLength": 8,
+                    "example": "12345678"
+                },
+                "username": {
+                    "type": "string",
+                    "minLength": 2,
+                    "example": "mdmitry"
+                }
+            }
+        },
         "domain.UpdateNote": {
             "type": "object",
             "properties": {
@@ -499,25 +566,6 @@
                     "minLength": 2,
                     "example": "Dmitry"
                 },
-                "password": {
-                    "type": "string",
-                    "minLength": 8,
-                    "example": "12345678"
-                },
-                "username": {
-                    "type": "string",
-                    "minLength": 2,
-                    "example": "mdmitry"
-                }
-            }
-        },
-        "rest.signInInput": {
-            "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
-            "properties": {
                 "password": {
                     "type": "string",
                     "minLength": 8,
